# cascada_mini

./: .gitignore  CMakeLists.txt  README.md  cascada.opam  dune-project
example/: .arithmetic.csc.swp  .hello.csc.swp  .processes.csc.swp  .strings.csc.swp  arithmetic.csc  curl.csc  elf.csc  functions.csc  hello.csc  processes.csc  regex.csc  stream.csc  streams.csc  strings.csc  wc.csc
example/src/: dune  lexer.mll
include/cascada/: ast.h  cascada.h  context.h  error.h  linked_list.h  object.h  parse.h  scan.h
lib/: io.csc
src/: CMakeLists.txt  CascadaLexer.g4  CascadaLexer.tokens  CascadaParser.g4  cascada.c  cascada_lexer.l  cascada_parser.y  cascada_token.c  cascada_token.h  lexer.mll  linked_list.c  main.c  parser.mly  scan.c
