opam-version: "2.0"
name: "cascada"
version: "0.0"
synopsis: "Functional language built atop the POSIX shell."
maintainer: "thosakwe@gmail.com"
authors: ["Tobe O"]
homepage: "https://github.com/thosakwe/cascada"
bug-reports: "https://github.com/thosakwe/cascada/issues"
dev-repo: "git://github.com/thosakwe/cascada.git"
license: "GPL-3.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
